--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -20,7 +20,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Fetch all history for cherry-pick
-          ref: production
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Determine new branch name & commit
@@ -35,10 +34,9 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch --all
+          git switch production
           git checkout -b ${{ steps.vars.outputs.branch }}
           git cherry-pick ${{ steps.vars.outputs.sha }}
-          git log
           git push origin ${{ steps.vars.outputs.branch }}
 
       # - name: Open PR to production
