--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -39,12 +39,11 @@ jobs:
           git cherry-pick ${{ steps.vars.outputs.sha }}
           git push origin ${{ steps.vars.outputs.branch }}
 
-      # - name: Open PR to production
-      #   uses: peter-evans/create-pull-request@v7
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     base: production
-      #     branch: ${{ steps.vars.outputs.branch }}
-      #     title: "[Release] ${{ github.event.pull_request.title }}"
-      #     body: |
-      #       Release #${{ github.event.pull_request.number }}
+      - name: Create Pull Request
+        run: |
+          gh pr create \
+            --base production \
+            --head ${{ steps.vars.outputs.branch }} \
+            --title "Release #${{ github.event.pull_request.number }}" \
+            --body "This PR cherry-picks changes from PR #${{ github.event.pull_request.number }} into the production branch." \
+            --repo ${{ github.repository }}
