--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -26,7 +26,7 @@ jobs:
         id: vars
         run: |
           BRANCH=release-${{ github.event.pull_request.number }}
-          MERGE_SHA=$(curl -s https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }} | jq -r '.merge_commit_sha')
+          MERGE_SHA=${{ github.event.pull_request.merge_commit_sha }}
           echo "branch=${BRANCH}" >> $GITHUB_OUTPUT
           echo "sha=${MERGE_SHA}"  >> $GITHUB_OUTPUT
 
